typed-i18n/tests/compile-fail/no_parameters.stderr
error: missing parameters
 --> tests/compile-fail/no_parameters.rs:4:1
  |
4 | #[typed_i18n(builder = "static_str")]
  | ^
